# pkg/api/v1/auth-service.pb.go
@@ -68,7 +68,7 @@ const (
 	CreateUserResponse_INVALID_EMAIL    CreateUserResponse_ErrorCode = 2
 	CreateUserResponse_INVALID_USERNAME CreateUserResponse_ErrorCode = 3
 	CreateUserResponse_USERNAME_TAKEN   CreateUserResponse_ErrorCode = 4
-	CreateUserResponse_EMAIL_TAKEN      CreateUserResponse_ErrorCode = 5
+	CreateUserResponse_EMAIL_IN_USE     CreateUserResponse_ErrorCode = 5
 	CreateUserResponse_BLANK_USERNAME   CreateUserResponse_ErrorCode = 6
 	CreateUserResponse_BLANK_PASSWORD   CreateUserResponse_ErrorCode = 7
 )
@@ -79,7 +79,7 @@ var CreateUserResponse_ErrorCode_name = map[int32]string{
 	2: "INVALID_EMAIL",
 	3: "INVALID_USERNAME",
 	4: "USERNAME_TAKEN",
-	5: "EMAIL_TAKEN",
+	5: "EMAIL_IN_USE",
 	6: "BLANK_USERNAME",
 	7: "BLANK_PASSWORD",
 }
@@ -90,7 +90,7 @@ var CreateUserResponse_ErrorCode_value = map[string]int32{
 	"INVALID_EMAIL":    2,
 	"INVALID_USERNAME": 3,
 	"USERNAME_TAKEN":   4,
-	"EMAIL_TAKEN":      5,
+	"EMAIL_IN_USE":     5,
 	"BLANK_USERNAME":   6,
 	"BLANK_PASSWORD":   7,
 }
@@ -104,8 +104,9 @@ func (CreateUserResponse_ErrorCode) EnumDescriptor() ([]byte, []int) {
 }
 
 type LoginRequest struct {
-	Username             string   `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
-	Password             string   `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	Api                  string   `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
+	Username             string   `protobuf:"bytes,2,opt,name=username,proto3" json:"username,omitempty"`
+	Password             string   `protobuf:"bytes,3,opt,name=password,proto3" json:"password,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -136,6 +137,13 @@ func (m *LoginRequest) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_LoginRequest proto.InternalMessageInfo
 
+func (m *LoginRequest) GetApi() string {
+	if m != nil {
+		return m.Api
+	}
+	return ""
+}
+
 func (m *LoginRequest) GetUsername() string {
 	if m != nil {
 		return m.Username
@@ -152,7 +160,7 @@ func (m *LoginRequest) GetPassword() string {
 
 type LoginResponse struct {
 	Api                  string                  `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
-	OpaqueToken          string                  `protobuf:"bytes,2,opt,name=opaque_token,json=opaqueToken,proto3" json:"opaque_token,omitempty"`
+	Token                string                  `protobuf:"bytes,2,opt,name=token,proto3" json:"token,omitempty"`
 	ErrorCode            LoginResponse_ErrorCode `protobuf:"varint,3,opt,name=error_code,json=errorCode,proto3,enum=auth.v1.LoginResponse_ErrorCode" json:"error_code,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}                `json:"-"`
 	XXX_unrecognized     []byte                  `json:"-"`
@@ -191,9 +199,9 @@ func (m *LoginResponse) GetApi() string {
 	return ""
 }
 
-func (m *LoginResponse) GetOpaqueToken() string {
+func (m *LoginResponse) GetToken() string {
 	if m != nil {
-		return m.OpaqueToken
+		return m.Token
 	}
 	return ""
 }
@@ -206,9 +214,10 @@ func (m *LoginResponse) GetErrorCode() LoginResponse_ErrorCode {
 }
 
 type CreateUserRequest struct {
-	Email                string   `protobuf:"bytes,1,opt,name=email,proto3" json:"email,omitempty"`
-	Username             string   `protobuf:"bytes,2,opt,name=username,proto3" json:"username,omitempty"`
-	Password             string   `protobuf:"bytes,3,opt,name=password,proto3" json:"password,omitempty"`
+	Api                  string   `protobuf:"bytes,1,opt,name=api,proto3" json:"api,omitempty"`
+	Email                string   `protobuf:"bytes,2,opt,name=email,proto3" json:"email,omitempty"`
+	Username             string   `protobuf:"bytes,3,opt,name=username,proto3" json:"username,omitempty"`
+	Password             string   `protobuf:"bytes,4,opt,name=password,proto3" json:"password,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -238,6 +247,13 @@ func (m *CreateUserRequest) XXX_DiscardUnknown() {
 }
 
 var xxx_messageInfo_CreateUserRequest proto.InternalMessageInfo
+
+func (m *CreateUserRequest) GetApi() string {
+	if m != nil {
+		return m.Api
+	}
+	return ""
+}
 
 func (m *CreateUserRequest) GetEmail() string {
 	if m != nil {
@@ -327,49 +343,49 @@ func init() {
 func init() { proto.RegisterFile("auth-service.proto", fileDescriptor_40c3308acdd691b6) }
 
 var fileDescriptor_40c3308acdd691b6 = []byte{
-	// 670 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0xcd, 0x6e, 0xd3, 0x4a,
-	0x14, 0xbe, 0x76, 0xd2, 0xa6, 0x9d, 0xfe, 0x5c, 0x77, 0xda, 0x5b, 0xa5, 0xb9, 0x08, 0x19, 0x4b,
-	0x48, 0x55, 0x44, 0xed, 0x26, 0x74, 0x15, 0x16, 0xe0, 0x26, 0x46, 0x8a, 0x9a, 0x26, 0x74, 0x92,
-	0x80, 0xd4, 0x8d, 0xe5, 0x3a, 0x87, 0xc4, 0x90, 0xce, 0xb8, 0x33, 0xe3, 0x14, 0x21, 0x56, 0xf0,
-	0x06, 0xb0, 0xe3, 0x01, 0xd8, 0xb2, 0xe2, 0x49, 0xd8, 0xb1, 0x44, 0x3c, 0x08, 0xb2, 0xe3, 0xa4,
-	0x7f, 0xa1, 0x12, 0xab, 0xcc, 0xf9, 0xce, 0x37, 0xdf, 0xc9, 0x7c, 0xe7, 0xf8, 0x20, 0xec, 0x45,
-	0x72, 0xb0, 0x23, 0x80, 0x8f, 0x02, 0x1f, 0xcc, 0x90, 0x33, 0xc9, 0x70, 0x2e, 0xc6, 0xcc, 0x51,
-	0xa9, 0x70, 0xa7, 0xcf, 0x58, 0x7f, 0x08, 0x96, 0x17, 0x06, 0x96, 0x47, 0x29, 0x93, 0x9e, 0x0c,
-	0x18, 0x15, 0x63, 0x5a, 0xe1, 0x41, 0xf2, 0xe3, 0xef, 0xf4, 0x81, 0xee, 0x88, 0x73, 0xaf, 0xdf,
-	0x07, 0x6e, 0xb1, 0x30, 0x61, 0xdc, 0x64, 0x1b, 0x4f, 0xd1, 0x72, 0x83, 0xf5, 0x03, 0x4a, 0xe0,
-	0x2c, 0x02, 0x21, 0x71, 0x01, 0x2d, 0x44, 0x02, 0x38, 0xf5, 0x4e, 0x21, 0xaf, 0xe8, 0xca, 0xf6,
-	0x22, 0x99, 0xc6, 0x71, 0x2e, 0xf4, 0x84, 0x38, 0x67, 0xbc, 0x97, 0x57, 0xc7, 0xb9, 0x49, 0x6c,
-	0x7c, 0x50, 0xd1, 0x4a, 0x2a, 0x24, 0x42, 0x46, 0x05, 0x60, 0x0d, 0x65, 0xbc, 0x30, 0x48, 0x45,
-	0xe2, 0x23, 0xbe, 0x87, 0x96, 0x59, 0xe8, 0x9d, 0x45, 0xe0, 0x4a, 0xf6, 0x1a, 0x68, 0xaa, 0xb1,
-	0x34, 0xc6, 0x3a, 0x31, 0x84, 0x1f, 0x23, 0x04, 0x9c, 0x33, 0xee, 0xfa, 0xac, 0x07, 0xf9, 0x8c,
-	0xae, 0x6c, 0xaf, 0x96, 0x75, 0x33, 0x7d, 0xb8, 0x79, 0xa5, 0x80, 0xe9, 0xc4, 0xc4, 0x2a, 0xeb,
-	0x01, 0x59, 0x84, 0xc9, 0xd1, 0x78, 0x87, 0x16, 0xa7, 0x38, 0xfe, 0x17, 0x2d, 0xed, 0xdb, 0x35,
-	0x97, 0x38, 0x47, 0x5d, 0xa7, 0xdd, 0xd1, 0xfe, 0xc1, 0x18, 0xad, 0xd6, 0x9b, 0x1d, 0x87, 0x34,
-	0xed, 0x86, 0xeb, 0x10, 0xd2, 0x22, 0x9a, 0x82, 0x0d, 0x74, 0xb7, 0xde, 0xac, 0xb6, 0x08, 0x71,
-	0xaa, 0x1d, 0xb7, 0xdb, 0x8e, 0x93, 0x87, 0x8e, 0xdb, 0x22, 0xee, 0x33, 0xbb, 0xdd, 0x7e, 0xd1,
-	0x22, 0x35, 0x4d, 0x8d, 0xef, 0xed, 0x37, 0xec, 0xe6, 0xc1, 0x34, 0xaf, 0x65, 0x2e, 0xb0, 0x29,
-	0x2f, 0x6b, 0x78, 0x68, 0xad, 0xca, 0xc1, 0x93, 0xd0, 0x15, 0xc0, 0x27, 0x96, 0x6e, 0xa0, 0x39,
-	0x38, 0xf5, 0x82, 0x61, 0x6a, 0xc5, 0x38, 0xb8, 0x62, 0xb4, 0x7a, 0x8b, 0xd1, 0x99, 0x6b, 0x46,
-	0x7f, 0x55, 0x11, 0xbe, 0x5c, 0xe3, 0x8f, 0x6e, 0xe7, 0x51, 0x4e, 0x44, 0xbe, 0x0f, 0x42, 0x24,
-	0xfa, 0x0b, 0x64, 0x12, 0xe2, 0xda, 0x0c, 0x93, 0xef, 0x4f, 0x4d, 0xbe, 0x29, 0x3e, 0xdb, 0xe9,
-	0x2f, 0xca, 0x5f, 0x5b, 0xbd, 0x86, 0x56, 0xea, 0xcd, 0xe7, 0x76, 0xa3, 0x5e, 0x73, 0x9d, 0x43,
-	0xbb, 0xde, 0xd0, 0x54, 0xbc, 0x81, 0xb4, 0x09, 0x74, 0xd5, 0xdb, 0x69, 0x27, 0x3a, 0xf6, 0x81,
-	0xd3, 0xd4, 0xb2, 0x71, 0x85, 0xe4, 0x52, 0x0a, 0xcc, 0xcd, 0x68, 0xca, 0xfc, 0x8c, 0xa6, 0xe4,
-	0xca, 0xdf, 0x14, 0x94, 0xb5, 0x23, 0x39, 0xc0, 0xc7, 0x08, 0x5d, 0x3c, 0x0e, 0x17, 0x66, 0xbe,
-	0x38, 0x69, 0x59, 0xe1, 0xff, 0x5b, 0xdc, 0x30, 0xd6, 0xdf, 0x7f, 0xff, 0xf5, 0x49, 0x5d, 0x31,
-	0x16, 0xac, 0x51, 0xc9, 0x8a, 0x79, 0x15, 0xa5, 0x88, 0x8f, 0xd0, 0x5c, 0x32, 0x9d, 0xf8, 0xbf,
-	0xeb, 0xd3, 0x3a, 0x56, 0xdc, 0x9c, 0x3d, 0xc4, 0xc6, 0x56, 0x22, 0xb6, 0x6e, 0xac, 0x4e, 0xc4,
-	0xac, 0x61, 0x9c, 0xaf, 0x28, 0xc5, 0xfd, 0x9f, 0xca, 0x47, 0xfb, 0x87, 0x82, 0x25, 0xda, 0x8c,
-	0xff, 0x3d, 0x50, 0x19, 0xf8, 0xc9, 0xa7, 0xab, 0xa7, 0x6b, 0xc1, 0xe8, 0xa2, 0xe5, 0xcb, 0x6b,
-	0x02, 0x17, 0x07, 0x52, 0x86, 0xa2, 0x62, 0x59, 0xfd, 0x40, 0x0e, 0xbd, 0x13, 0xd3, 0x67, 0xa7,
-	0xd6, 0x5b, 0xe0, 0xcc, 0x7d, 0xc9, 0x99, 0x90, 0xd6, 0x65, 0x6e, 0x61, 0xeb, 0x22, 0xf1, 0x24,
-	0xd9, 0x04, 0x34, 0x9e, 0xca, 0xf8, 0x4a, 0x39, 0x53, 0x32, 0x77, 0x8b, 0x8a, 0x52, 0xd6, 0xbc,
-	0x30, 0x1c, 0xa6, 0x35, 0xad, 0x57, 0x82, 0xd1, 0xca, 0x0d, 0x84, 0x3c, 0x42, 0x99, 0xbd, 0xdd,
-	0x3d, 0xbc, 0x87, 0x8a, 0x04, 0x64, 0xc4, 0x29, 0xf4, 0xf4, 0xf3, 0x01, 0x50, 0x5d, 0x0e, 0x40,
-	0xe7, 0x20, 0x58, 0xc4, 0x7d, 0xd0, 0x7b, 0x0c, 0x84, 0x4e, 0x99, 0xd4, 0xe1, 0x4d, 0x20, 0xa4,
-	0x89, 0xe7, 0x51, 0xf6, 0xb3, 0xaa, 0xe4, 0x8e, 0xd5, 0x51, 0xe9, 0x64, 0x3e, 0x29, 0xfe, 0xf0,
-	0x77, 0x00, 0x00, 0x00, 0xff, 0xff, 0x94, 0xbe, 0x1a, 0x7d, 0xf1, 0x04, 0x00, 0x00,
+	// 665 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0x4d, 0x6f, 0xd3, 0x4c,
+	0x10, 0x7e, 0x9d, 0x8f, 0xa6, 0x9d, 0xb7, 0x2d, 0xee, 0xb6, 0x54, 0x69, 0x40, 0xc8, 0xb2, 0x84,
+	0x84, 0x22, 0x6a, 0x37, 0xa1, 0xa7, 0x70, 0x00, 0x37, 0xf1, 0x21, 0x6a, 0x9a, 0xd0, 0x4d, 0x02,
+	0xa8, 0x17, 0xcb, 0x75, 0x86, 0xc4, 0x90, 0x7a, 0xcd, 0xee, 0x26, 0x45, 0x88, 0x13, 0x3f, 0x01,
+	0x6e, 0xfc, 0x01, 0xae, 0x5c, 0xf8, 0x25, 0xdc, 0x38, 0x22, 0x7e, 0x03, 0x67, 0x64, 0xe7, 0xa3,
+	0x5f, 0x6e, 0x25, 0x4e, 0xd9, 0x99, 0xe7, 0xd9, 0x67, 0x32, 0xcf, 0x8c, 0x17, 0x88, 0x3b, 0x92,
+	0x83, 0x6d, 0x81, 0x7c, 0xec, 0x7b, 0x68, 0x84, 0x9c, 0x49, 0x46, 0x72, 0x51, 0xce, 0x18, 0x97,
+	0x0a, 0x77, 0xfb, 0x8c, 0xf5, 0x87, 0x68, 0xba, 0xa1, 0x6f, 0xba, 0x41, 0xc0, 0xa4, 0x2b, 0x7d,
+	0x16, 0x88, 0x09, 0xad, 0xf0, 0x30, 0xfe, 0xf1, 0xb6, 0xfb, 0x18, 0x6c, 0x8b, 0x53, 0xb7, 0xdf,
+	0x47, 0x6e, 0xb2, 0x30, 0x66, 0x5c, 0x65, 0xeb, 0x2f, 0x61, 0xb9, 0xc1, 0xfa, 0x7e, 0x40, 0xf1,
+	0xed, 0x08, 0x85, 0x24, 0x2a, 0xa4, 0xdd, 0xd0, 0xcf, 0x2b, 0x9a, 0xf2, 0x60, 0x89, 0x46, 0x47,
+	0x52, 0x80, 0xc5, 0x91, 0x40, 0x1e, 0xb8, 0x27, 0x98, 0x4f, 0xc5, 0xe9, 0x79, 0x1c, 0x61, 0xa1,
+	0x2b, 0xc4, 0x29, 0xe3, 0xbd, 0x7c, 0x7a, 0x82, 0xcd, 0x62, 0xfd, 0x8f, 0x02, 0x2b, 0x53, 0x69,
+	0x11, 0xb2, 0x40, 0x60, 0x82, 0xf6, 0x06, 0x64, 0x25, 0x7b, 0x83, 0xc1, 0x54, 0x78, 0x12, 0x90,
+	0x27, 0x00, 0xc8, 0x39, 0xe3, 0x8e, 0xc7, 0x7a, 0x18, 0xeb, 0xae, 0x96, 0x35, 0x63, 0xda, 0xbd,
+	0x71, 0x41, 0xd3, 0xb0, 0x23, 0x62, 0x95, 0xf5, 0x90, 0x2e, 0xe1, 0xec, 0xa8, 0x7f, 0x80, 0xa5,
+	0x79, 0x9e, 0xdc, 0x82, 0xff, 0xf7, 0xac, 0x9a, 0x43, 0xed, 0xc3, 0xae, 0xdd, 0xee, 0xa8, 0xff,
+	0x11, 0x02, 0xab, 0xf5, 0x66, 0xc7, 0xa6, 0x4d, 0xab, 0xe1, 0xd8, 0x94, 0xb6, 0xa8, 0xaa, 0x10,
+	0x1d, 0xee, 0xd5, 0x9b, 0xd5, 0x16, 0xa5, 0x76, 0xb5, 0xe3, 0x74, 0xdb, 0x11, 0x78, 0x60, 0x3b,
+	0x2d, 0xea, 0x3c, 0xb3, 0xda, 0xed, 0x17, 0x2d, 0x5a, 0x53, 0x53, 0xd1, 0xbd, 0xbd, 0x86, 0xd5,
+	0xdc, 0x9f, 0xe3, 0x6a, 0xfa, 0x2c, 0x37, 0xe7, 0x65, 0x74, 0x01, 0x6b, 0x55, 0x8e, 0xae, 0xc4,
+	0xae, 0x40, 0x7e, 0xbd, 0xaf, 0x1b, 0x90, 0xc5, 0x13, 0xd7, 0x1f, 0xce, 0x7a, 0x8f, 0x83, 0x0b,
+	0x6e, 0xa7, 0x6f, 0x70, 0x3b, 0x73, 0xc9, 0xed, 0x6f, 0x29, 0x20, 0xe7, 0xab, 0x5e, 0x6b, 0x79,
+	0x1e, 0x72, 0x62, 0xe4, 0x79, 0x28, 0x44, 0x5c, 0x78, 0x91, 0xce, 0x42, 0x52, 0x4b, 0xb0, 0xfd,
+	0xfe, 0xdc, 0xf6, 0xab, 0xe2, 0xc9, 0xde, 0x7f, 0x55, 0xfe, 0xd9, 0xfc, 0x35, 0x58, 0xa9, 0x37,
+	0x9f, 0x5b, 0x8d, 0x7a, 0xcd, 0xb1, 0x0f, 0xac, 0x7a, 0x43, 0x4d, 0x91, 0x0d, 0x50, 0x67, 0xa9,
+	0x8b, 0x6e, 0xcf, 0x67, 0xd3, 0xb1, 0xf6, 0xed, 0xa6, 0x9a, 0x21, 0x2a, 0x2c, 0xc7, 0x97, 0x9c,
+	0x7a, 0x33, 0xa2, 0xaa, 0xd9, 0x84, 0x39, 0x2d, 0x24, 0xcc, 0x29, 0x57, 0xfe, 0xae, 0x40, 0xc6,
+	0x1a, 0xc9, 0x01, 0x39, 0x02, 0x38, 0xeb, 0x8e, 0x14, 0x12, 0x5b, 0x8e, 0xa7, 0x58, 0xb8, 0x73,
+	0x83, 0x1d, 0xfa, 0xfa, 0xc7, 0x1f, 0xbf, 0x3f, 0xa7, 0x56, 0xf4, 0x45, 0x73, 0x5c, 0x32, 0x23,
+	0x5e, 0x45, 0x29, 0x92, 0x43, 0xc8, 0xc6, 0x0b, 0x4b, 0x6e, 0x5f, 0x5e, 0xe0, 0x89, 0xe2, 0x66,
+	0xf2, 0x5e, 0xeb, 0x5b, 0xb1, 0xd8, 0xba, 0xbe, 0x3a, 0x13, 0x33, 0x87, 0x11, 0x5e, 0x51, 0x8a,
+	0x7b, 0xbf, 0x94, 0x4f, 0xd6, 0x4f, 0x85, 0x48, 0xd8, 0x8c, 0xfe, 0x3d, 0x06, 0xd2, 0xf7, 0xe2,
+	0x4f, 0x5a, 0x9b, 0x3e, 0x17, 0x7a, 0x17, 0x96, 0xcf, 0x3f, 0x1f, 0xa4, 0x38, 0x90, 0x32, 0x14,
+	0x15, 0xd3, 0xec, 0xfb, 0x72, 0xe8, 0x1e, 0x1b, 0x1e, 0x3b, 0x31, 0xdf, 0x23, 0x67, 0xce, 0x2b,
+	0xce, 0x84, 0x34, 0xcf, 0x73, 0x0b, 0x5b, 0x67, 0xc0, 0xd3, 0xf8, 0x85, 0x08, 0xa2, 0xb5, 0x8c,
+	0xae, 0x94, 0xd3, 0x25, 0x63, 0xa7, 0xa8, 0x28, 0x65, 0xd5, 0x0d, 0xc3, 0xe1, 0xb4, 0xa6, 0xf9,
+	0x5a, 0xb0, 0xa0, 0x72, 0x25, 0x43, 0x1f, 0x43, 0x7a, 0x77, 0x67, 0x97, 0xec, 0x42, 0x91, 0xa2,
+	0x1c, 0xf1, 0x00, 0x7b, 0xda, 0xe9, 0x00, 0x03, 0x4d, 0x0e, 0x50, 0xe3, 0x28, 0xd8, 0x88, 0x7b,
+	0xa8, 0xf5, 0x18, 0x0a, 0x2d, 0x60, 0x52, 0xc3, 0x77, 0xbe, 0x90, 0x06, 0x59, 0x80, 0xcc, 0x97,
+	0x94, 0x92, 0x3b, 0x4a, 0x8d, 0x4b, 0xc7, 0x0b, 0x71, 0xf1, 0x47, 0x7f, 0x03, 0x00, 0x00, 0xff,
+	0xff, 0xce, 0x89, 0xb8, 0xff, 0x09, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
